objects/Apttus__WizardDesign__c.object
<CustomObject>
    <description>Holds all the wizard design records</description>
    <fields>
        <fullName>Apttus__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the Wizard Design is Active. Once activated, the wizard cannot be modified.</description>
        <inlineHelpText>Indicates the Wizard Design is Active. Once activated, the wizard cannot be modified.</inlineHelpText>
        <label>Active (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__AllowReviewEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the runtime user is allowed to edit inputs during review</description>
        <inlineHelpText>Indicates whether the runtime user is allowed to edit inputs during review</inlineHelpText>
        <label>Allow Review Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__BannerStatement__c</fullName>
        <description>Defaults to Wizard Design name and is used by the Wizard Runtime as the banner.</description>
        <inlineHelpText>Defaults to Wizard Design name and is used by the Wizard Runtime as the banner.</inlineHelpText>
        <label>Banner Statement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__CSSFilename__c</fullName>
        <description>Name of the CSS file in the static resource</description>
        <inlineHelpText>Name of the CSS file in the static resource</inlineHelpText>
        <label>CSS Filename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Category__c</fullName>
        <description>Controlling the subcategory field, whose list values shall allow users to search, find, and select Wizards</description>
        <inlineHelpText>Controlling the subcategory field, whose list values shall allow users to search, find, and select Wizards</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__ContextObject__c</fullName>
        <description>Business object context, used to filter and align inputs and steps</description>
        <inlineHelpText>Business object context, used to filter and align inputs and steps</inlineHelpText>
        <label>Context Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ContextType__c</fullName>
        <description>Type of context, whether its All or Object.
All means that any step can be used in the wizard design.
Object means that only aligned (same object) steps can be used in the wizard design.</description>
        <inlineHelpText>Type of context, whether its All or Object.
All means that any step can be used in the wizard design.
Object means that only aligned (same object) steps can be used in the wizard design.</inlineHelpText>
        <label>Context Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Object</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__DataSourceCallback__c</fullName>
        <label>DataSource Callback</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>Provides more information for the runtime wizard user to understand the intended use of the runtime Wizard.</description>
        <inlineHelpText>Provides more information for the runtime wizard user to understand the intended use of the runtime Wizard.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Keywords__c</fullName>
        <description>Additional field for use in search and selection</description>
        <inlineHelpText>Additional field for use in search and selection</inlineHelpText>
        <label>Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__MetaPropertyFieldSetName__c</fullName>
        <label>Meta Property FieldSet Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__RuntimeHelpText__c</fullName>
        <description>Describe what the runtime user can see as a help or instruction description for this wizard design.</description>
        <inlineHelpText>Describe what the runtime user can see as a help or instruction description for this wizard design.</inlineHelpText>
        <label>Runtime Help Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__StaticResource__c</fullName>
        <description>Static resource file to be used for customizing wizard</description>
        <inlineHelpText>Static resource file to be used for customizing wizard</inlineHelpText>
        <label>Static Resource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Status__c</fullName>
        <description>Wizard design status</description>
        <inlineHelpText>Wizard design status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Deactivated</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Subcategory__c</fullName>
        <description>Dependent on the category field, whose list values shall allow users to search, find, and select Wizard designs</description>
        <inlineHelpText>Dependent on the category field, whose list values shall allow users to search, find, and select Wizard designs</inlineHelpText>
        <label>Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus__Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Wizard Design</label>
    <nameField>
        <label>Design Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wizard Designs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>